# MyIDE_Base

./: .gitignore  CLAUDE.md  README.md
.claude/: settings.local.json
cmake/: QtCreatorAPI.cmake
demo/: CMakeLists.txt
demo/app/: CMakeLists.txt  main.cpp  mywindow.cpp  mywindow.h
demo/testplugin/: CMakeLists.txt  TestPlugin.json.in  testplugin.cpp  testplugin.h
docs/: ads.md  qwindowkit.md
docs/plugin_system/: 00.md  01_概览.md  02_最小插件.md  03_插件元数据.md  04_IPlugin详解.md
scripts/: install.ps1
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp
src/libs/: CMakeLists.txt
src/libs/advanceddockingsystem/: CMakeLists.txt
src/libs/advanceddockingsystem/src/: CMakeLists.txt
src/libs/extensionsystem/: pluginmanager.cpp
src/plugins/: CMakeLists.txt
src/plugins/core/: CMakeLists.txt  Core.json.in  core_global.h  coreconstants.h  coreplugin.cpp  coreplugin.h  documentmanager.cpp  documentmanager.h  helpitem.h  icontext.cpp  icontext.h  icore.cpp  icore.h  idocument.cpp  idocument.h  idocumentfactory.cpp  idocumentfactory.h  imode.cpp  imode.h  modemanager.cpp  modemanager.h
src/plugins/core/actionmanager/: actioncontainer.cpp  actioncontainer.h  actioncontainer_p.h  actionmanager.cpp  actionmanager.h  actionmanager_p.h  command.cpp  command.h  command_p.h  commandbutton.cpp  commandbutton.h
src/plugins/core/adapters/: modebar_adapter.cpp  modebar_adapter.h
src/plugins/core/dialogs/: ioptionspage.cpp  ioptionspage.h
src/plugins/testplugin/: CMakeLists.txt  testplugin.cpp  testplugin.json.in
