cmake_minimum_required(VERSION 3.16)

# ============================================================================
# TestPlugin Demo — IDE 开发者示例：如何加载基座库构建自己的插件
# ============================================================================
# 使用方式 (独立构建):
#   cmake -B build -DIDELIB_DIR="D:/IDElib/Debug" -DCMAKE_PREFIX_PATH="D:/Qt/6.x.x/msvc2019_64"
#   cmake --build build
#
# 构建产物 TestPlugin.dll 需放到 MyIDE 的 plugins/ 目录下运行。
# ============================================================================

project(TestPlugin VERSION 1.0.0 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_AUTOMOC ON)

# ============================================================================
# 1. 定位 IDElib
# ============================================================================
if(NOT IDELIB_DIR)
    if(DEFINED ENV{IDELIB_DIR})
        set(IDELIB_DIR "$ENV{IDELIB_DIR}")
    else()
        foreach(_p IN LISTS CMAKE_PREFIX_PATH)
            if(EXISTS "${_p}/include/extensionsystem")
                set(IDELIB_DIR "${_p}")
                break()
            endif()
        endforeach()
    endif()
endif()

if(NOT IDELIB_DIR)
    message(FATAL_ERROR
        "请设置 IDELIB_DIR 或 CMAKE_PREFIX_PATH 指向 IDElib 目录 (如 D:/IDElib/Debug)")
endif()

message(STATUS "IDELIB_DIR = ${IDELIB_DIR}")

set(IDELIB_INCLUDE_DIR "${IDELIB_DIR}/include")
set(IDELIB_LIB_DIR     "${IDELIB_DIR}/lib")
set(IDELIB_BIN_DIR     "${IDELIB_DIR}/bin")

# ============================================================================
# 2. 查找 Qt 6
# ============================================================================
find_package(Qt6 REQUIRED COMPONENTS Core Gui Widgets)

# ============================================================================
# 3. 导入预编译 IDE 库
# ============================================================================
macro(import_idelib name)
    # 第 2 个位置参数：include 子目录（可选）
    # 第 3 个位置参数：debug postfix（可选，缺省为空）
    set(_suffix "")
    if(${ARGC} GREATER 2)
        set(_suffix "${ARGV2}")
    endif()
    if(${ARGC} GREATER 1)
        set(_inc_dir "${IDELIB_INCLUDE_DIR}/${ARGV1}")
    else()
        set(_inc_dir "${IDELIB_INCLUDE_DIR}")
    endif()
    add_library(${name} SHARED IMPORTED)
    set_target_properties(${name} PROPERTIES
        IMPORTED_LOCATION             "${IDELIB_BIN_DIR}/${name}${_suffix}.dll"
        IMPORTED_IMPLIB               "${IDELIB_LIB_DIR}/${name}${_suffix}.lib"
        INTERFACE_INCLUDE_DIRECTORIES "${_inc_dir}"
    )
endmacro()

import_idelib(ExtensionSystem)
import_idelib(Utils)
import_idelib(Aggregation)
import_idelib(AdvancedDockingSystem)
import_idelib(Core                  coreplugin)
import_idelib(KSyntaxHighlighting  3rdparty/syntax-highlighting/autogenerated/include)
# KSyntaxHighlighting 需要三层 include:
#   autogenerated/include  →  #include <KSyntaxHighlighting/Repository>
#   src/lib                →  #include "repository.h"
#   autogenerated/src/lib  →  #include "ksyntaxhighlighting_export.h"
set_property(TARGET KSyntaxHighlighting APPEND PROPERTY INTERFACE_INCLUDE_DIRECTORIES
    "${IDELIB_INCLUDE_DIR}/3rdparty/syntax-highlighting/src/lib"
    "${IDELIB_INCLUDE_DIR}/3rdparty/syntax-highlighting/autogenerated/src/lib"
)
import_idelib(3rd_cplusplus        3rdparty)

# QWindowKit debug postfix 与主项目 src/libs/CMakeLists.txt 对齐
if(CMAKE_BUILD_TYPE STREQUAL "Debug")
    set(_qwk_suffix "d")
else()
    set(_qwk_suffix "")
endif()
import_idelib(QWKCore     qwindowkit  ${_qwk_suffix})
import_idelib(QWKWidgets  qwindowkit  ${_qwk_suffix})

# ============================================================================
# 4. 处理 TestPlugin.json.in → 生成 TestPlugin.json
# ============================================================================
set(IDE_VERSION "1.0.0")
set(IDE_VERSION_COMPAT "1.0.0")
configure_file(TestPlugin.json.in TestPlugin.json @ONLY)
# 注意: 原版 .json.in 使用 $$QTCREATOR_VERSION 占位符，这里改用 @IDE_VERSION@
# 如果 .json.in 内容还是旧格式，会直接复制原文件。

# ============================================================================
# 5. 构建 TestPlugin 动态库 (插件)
# ============================================================================
add_library(TestPlugin SHARED
    testplugin.cpp
    testplugin.h
    TestPlugin.json
)

target_link_libraries(TestPlugin PRIVATE
    ExtensionSystem
    Utils
    Aggregation
    AdvancedDockingSystem
    Core
    KSyntaxHighlighting
    3rd_cplusplus
    QWKCore
    QWKWidgets
    Qt6::Core
    Qt6::Gui
    Qt6::Widgets
)

target_compile_definitions(TestPlugin PRIVATE
    TESTPLUGIN_LIBRARY
)

target_include_directories(TestPlugin PRIVATE
    ${CMAKE_CURRENT_BINARY_DIR}
)

# ============================================================================
# 6. 拷贝运行时 DLL 到输出目录 (方便独立调试)
# 注意: Ninja 生成器只保留同一 target 的第一个 add_custom_command(POST_BUILD),
# 所有 post-build 操作必须合并到一个 add_custom_command 里
# ============================================================================
set(_runtime_dlls
    ExtensionSystem.dll
    Utils.dll
    Aggregation.dll
    AdvancedDockingSystem.dll
    Core.dll
    KSyntaxHighlighting.dll
    3rd_cplusplus.dll
    QWKCore${_qwk_suffix}.dll
    QWKWidgets${_qwk_suffix}.dll
)

set(_post_build_cmds)
foreach(_dll IN LISTS _runtime_dlls)
    list(APPEND _post_build_cmds
        COMMAND ${CMAKE_COMMAND} -E copy_if_different
            "${IDELIB_BIN_DIR}/${_dll}"
            "$<TARGET_FILE_DIR:TestPlugin>"
    )
endforeach()

# 当作为 demo 整体构建时 (顶层 CMakeLists.txt 用 add_subdirectory 拉入)，
# 把 TestPlugin.dll 复制到 MyIDE 的 bin/ 目录（与 Core.dll 同级），
# 并把它额外依赖的 KSyntaxHighlighting / 3rd_cplusplus 复制到 MyIDE 输出
# 目录根，这样插件在加载时能通过 Windows 的"应用程序目录"搜索路径找到它们。
# 独立构建 testplugin 时 (TARGET MyIDE 不存在) 跳过这一步。
if(TARGET MyIDE)
    list(APPEND _post_build_cmds
        COMMAND ${CMAKE_COMMAND} -E copy_if_different
            "$<TARGET_FILE:TestPlugin>"
            "$<TARGET_FILE_DIR:MyIDE>/"
        COMMAND ${CMAKE_COMMAND} -E copy_if_different
            "${IDELIB_BIN_DIR}/KSyntaxHighlighting.dll"
            "$<TARGET_FILE_DIR:MyIDE>/"
        COMMAND ${CMAKE_COMMAND} -E copy_if_different
            "${IDELIB_BIN_DIR}/3rd_cplusplus.dll"
            "$<TARGET_FILE_DIR:MyIDE>/"
    )
endif()

add_custom_command(TARGET TestPlugin POST_BUILD
    ${_post_build_cmds}
)
